syntax = "proto3";
package model;

message Request {
  string search_query = 1;
}

message Response {
  repeated DocumentStats relevant_documents = 1;

  message DocumentStats {
      string document_name = 1;
      double score = 2;
      int64 document_size = 3;
      string author = 4;
  }
}
